force-app/main/default/objects/LeanData__Marketing_Touch__c/LeanData__Marketing_Touch__c.object-meta.xml
<CustomObject>
    <label>Marketing Touch</label>
    <nameField>
        <displayFormat>MT-{000000000}</displayFormat>
        <label>Marketing_Touch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Touches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>