force-app/main/default/objects/LeanData__Marketing_Touch__c/fields/LeanData__Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Closed_Won__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed Won</label>
    <type>Checkbox</type>
</CustomField>