force-app/main/default/objects/LeanData__Marketing_Touch__c/fields/LeanData__FT_Attribution_Percentage__c.field-meta.xml
<CustomField>
    <fullName>LeanData__FT_Attribution_Percentage__c</fullName>
    <label>FT Attribution Percentage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>