force-app/main/default/objects/LeanData__Marketing_Touch__c/fields/LeanData__Opportunity_Touch_Stage__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Opportunity_Touch_Stage__c</fullName>
    <externalId>true</externalId>
    <label>Opportunity Stage at Touch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>