force-app/main/default/objects/LeanData__Marketing_Touch__c/fields/LeanData__Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Related Marketing Touches</relationshipLabel>
    <relationshipName>Related_Marketing_Touches</relationshipName>
    <type>Lookup</type>
</CustomField>