force-app/main/default/objects/LeanData__Marketing_Touch__c/fields/LeanData__Touch_Order__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Touch_Order__c</fullName>
    <label>Touch Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Touch</fullName>
            </value>
            <value>
                <fullName>Middle Touch</fullName>
            </value>
            <value>
                <fullName>Last Touch</fullName>
            </value>
            <value>
                <fullName>First &amp; Last Touch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>